# ntpd-rs

./: Cargo.toml
ntp-proto/src/: keyset.rs  lib.rs
ntp-proto/src/packet/: extensionfields.rs  mod.rs
pkg/ntpd-release/: .gitignore  Cargo.toml
pkg/ntpd-release/src/: main.rs
